[DROOLS-5780] descope ecj (#3237)
* [DROOLS-5780] descope ecj

* wip

* wip

* wip

* wip

* wip

* wip

* wip